--- a/STM32/Lab3.ioc
+++ b/STM32/Lab3.ioc
@@ -18,17 +18,21 @@ Mcu.Pin12=PB11
 Mcu.Pin13=PB12
 Mcu.Pin14=PB13
 Mcu.Pin15=PA8
-Mcu.Pin16=PB3
-Mcu.Pin17=PB4
-Mcu.Pin18=PB5
-Mcu.Pin19=PB6
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11
+Mcu.Pin19=PA12
 Mcu.Pin2=PA2
-Mcu.Pin20=PB7
-Mcu.Pin21=PB8
-Mcu.Pin22=PB9
-Mcu.Pin23=VP_SYS_VS_ND
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PB3
+Mcu.Pin21=PB4
+Mcu.Pin22=PB5
+Mcu.Pin23=PB6
+Mcu.Pin24=PB7
+Mcu.Pin25=PB8
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_SYS_VS_ND
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
 Mcu.Pin5=PA5
@@ -36,7 +40,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=26
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Ux
@@ -62,6 +66,19 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=Y1
 PA1.Locked=true
 PA1.Signal=GPIO_Output
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA10.GPIO_Label=EN1
+PA10.GPIO_PuPd=GPIO_NOPULL
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=EN2
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=EN3
+PA12.Locked=true
+PA12.Signal=GPIO_Output
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=G1
 PA2.Locked=true
@@ -93,6 +110,10 @@ PA8.GPIO_Label=BUTTON3
 PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Locked=true
 PA8.Signal=GPIO_Input
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=EN0
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=a1
 PB0.Locked=true
@@ -177,7 +198,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.APB1Freq_Value=8000000
 RCC.APB2Freq_Value=8000000
 RCC.FamilyName=M
