--- a/STM32/Lab3.ioc
+++ b/STM32/Lab3.ioc
@@ -10,19 +10,19 @@ Mcu.IP3=TIM2
 Mcu.IPNb=4
 Mcu.Name=STM32F103C6Ux
 Mcu.Package=UFQFPN48
-Mcu.Pin0=PA0-WKUP
-Mcu.Pin1=PA1
-Mcu.Pin10=PB2
-Mcu.Pin11=PB10
-Mcu.Pin12=PB11
-Mcu.Pin13=PB12
-Mcu.Pin14=PB13
-Mcu.Pin15=PA8
+Mcu.Pin0=PC13-TAMPER-RTC
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PB1
+Mcu.Pin11=PB2
+Mcu.Pin12=PB10
+Mcu.Pin13=PB11
+Mcu.Pin14=PB12
+Mcu.Pin15=PB13
 Mcu.Pin16=PA9
 Mcu.Pin17=PA10
 Mcu.Pin18=PA11
 Mcu.Pin19=PA12
-Mcu.Pin2=PA2
+Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PB3
 Mcu.Pin21=PB4
 Mcu.Pin22=PB5
@@ -33,13 +33,13 @@ Mcu.Pin26=PB9
 Mcu.Pin27=VP_SYS_VS_ND
 Mcu.Pin28=VP_SYS_VS_Systick
 Mcu.Pin29=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB0
-Mcu.Pin9=PB1
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA4
+Mcu.Pin8=PA5
+Mcu.Pin9=PB0
 Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -95,21 +95,6 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=G2
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA6.GPIO_Label=BUTTON1
-PA6.GPIO_PuPd=GPIO_PULLUP
-PA6.Locked=true
-PA6.Signal=GPIO_Input
-PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA7.GPIO_Label=BUTTON2
-PA7.GPIO_PuPd=GPIO_PULLUP
-PA7.Locked=true
-PA7.Signal=GPIO_Input
-PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA8.GPIO_Label=BUTTON3
-PA8.GPIO_PuPd=GPIO_PULLUP
-PA8.Locked=true
-PA8.Signal=GPIO_Input
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=EN0
 PA9.Locked=true
@@ -170,6 +155,21 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=c2
 PB9.Locked=true
 PB9.Signal=GPIO_Output
+PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC13-TAMPER-RTC.GPIO_Label=BUTTON1
+PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLUP
+PC13-TAMPER-RTC.Locked=true
+PC13-TAMPER-RTC.Signal=GPIO_Input
+PC14-OSC32_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC14-OSC32_IN.GPIO_Label=BUTTON2
+PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLUP
+PC14-OSC32_IN.Locked=true
+PC14-OSC32_IN.Signal=GPIO_Input
+PC15-OSC32_OUT.GPIOParameters=GPIO_PuPd,GPIO_Label
+PC15-OSC32_OUT.GPIO_Label=BUTTON3
+PC15-OSC32_OUT.GPIO_PuPd=GPIO_PULLUP
+PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
